# wavefilter

./: .all-contributorsrc  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  develop_simple_pulse_finder_torch.ipynb  pyproject.toml
.github/workflows/: ci.yml
data/: .gitattributes
notebooks/: develop_simple_pulse_finder_torch.ipynb  inspect-data-generation.ipynb  train_simple_pulse_finder_torch.ipynb  train_softmax_wavefilter_torch.ipynb
tests/: test_datasets.py
wavefilter/: __init__.py  datasets.py  evaluate.py  inspect.py  models.py  pulse_functions.py
