[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavefilter"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Benjamin Edward Krikler", email = "4083697+benkrikler@users.noreply.github.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
      "pandas==1.3.5",
      "torch>=1.12",
      "scipy>=1.7",
      "tqdm>=4.64"
      ]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest >=6",
    "pytest-cov >=3",
]
dev = [
    "pytest >=6",
    "pre-commit >= 2",
]

[project.urls]
Documentation = "https://github.com/benkrikler/wavefilter#readme"
Issues = "https://github.com/benkrikler/wavefilter/issues"
Source = "https://github.com/benkrikler/wavefilter"

[tool.hatch.version]
path = "wavefilter/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  #"umap-learn==0.5",
  "jupyterlab>=3.4.7",
  "scikit-learn>=1.1.2",
  "matplotlib",
  "seaborn",
]

[tool.hatch.envs.default.scripts]
tests = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=wavefilter --cov=tests"
no-cov = "tests --no-cov"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "wavefilter/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
files = "wavefilter"
python_version = "3.7"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[tool.isort]
profile = "black"
